--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^16.9.34",
+    "@types/styled-components": "^5.1.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
-  }
+  },
+  "dependencies": {}
 }
