--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^16.9.34",
-    "@types/styled-components": "^5.1.0",
-    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.8.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "parcel-bundler": "^1.12.4",
     "styled-components": "^5.1.0",
-    "typescript": "^3.8.3"
+    "@types/react": "^16.9.34",
+    "@types/styled-components": "^5.1.0"
   },
   "dependencies": {}
 }
