--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "lib": ["es2015", "dom"],
+    "downlevelIteration": true,
+    "lib": ["es2017", "dom"],
     "strict": true
   },
   "include": ["src/**/*"]
