--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --public-url ./"
+    "build": "parcel build index.html --public-url ./",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.8.3",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@types/react": "^16.9.34",
+    "@types/styled-components": "^5.1.0",
+    "babel-jest": "^25.5.1",
+    "jest": "^25.5.3",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "parcel-bundler": "^1.12.4",
     "styled-components": "^5.1.0",
-    "@types/react": "^16.9.34",
-    "@types/styled-components": "^5.1.0"
+    "typescript": "^3.8.3"
   },
   "dependencies": {}
 }
