--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "route-calculator",
-  "version": "0.0.1",
+  "version": "0.6.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url ./",
-    "test": "jest"
+    "test": "jest",
+    "gh-pages-win": "pwd | Join-Path -Path { $_.Path } -ChildPath 'gh-pages' | Remove-Item -LiteralPath { $_ } -Recurse; parcel build index.html --public-url ./ --out-dir gh-pages",
+    "predeploy": "parcel build index.html --public-url ./ --out-dir gh-pages",
+    "deploy": "gh-pages -d gh-pages"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +19,7 @@
     "@types/react": "^16.9.34",
     "@types/styled-components": "^5.1.0",
     "babel-jest": "^25.5.1",
+    "gh-pages": "^2.2.0",
     "jest": "^25.5.3",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
