package.json hompage 수정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "route-calculator",
+  "homepage": "https://ktseo41.github.io/route-calculator/index.html",
   "version": "0.6.0",
   "description": "",
   "main": "index.html",
