--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^16.9.34",
     "@types/styled-components": "^5.1.0",
     "babel-jest": "^25.5.1",
+    "bulma": "^0.8.2",
     "gh-pages": "^2.2.0",
     "jest": "^25.5.3",
     "parcel-bundler": "^1.12.4",
