--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.26.5",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   },
