--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url ./",
     "test": "jest",
+    "watch": "parcel watch index.html --public-url ./",
     "gh-pages-win": "pwd | Join-Path -Path { $_.Path } -ChildPath 'gh-pages' | Remove-Item -LiteralPath { $_ } -Recurse; parcel build index.html --public-url ./ --out-dir gh-pages",
     "predeploy": "parcel build index.html --no-source-maps --public-url ./ --out-dir gh-pages",
     "deploy": "gh-pages -d gh-pages",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@types/fastclick": "^1.0.29",
     "@types/react": "^16.9.34",
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^7.0.3",
