--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/fastclick": "^1.0.29",
     "@types/react": "^16.9.34",
     "@types/styled-components": "^5.1.0",
