--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,12 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: npm i && npm test
+        run: npm i
       # # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
       #   run: |
       #     echo Add other actions to build,
       #     echo test, and deploy your project.
+    steps:
+      - name: start test
+        run: npm test
