--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: install dependencies
         run: npm i
+
+      - name: where am i?
+        run: pwd
       # # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
       #   run: |
