--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
 
       - name: where am i?
         run: pwd
+
+      - name: what i have?
+        run: ls
       # # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
       #   run: |
