--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,20 +18,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      # - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
       - name: install dependencies
         run: npm i
 
-      - name: where the hell
-        run: cd .. && ls
-
-      - name: where am i?
-        run: pwd
-
-      - name: what i have?
-        run: ls
       # # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
       #   run: |
