:bug: 네크로멘서에서 타 직업으로 변경시 인트 초기화안되는 버그 수정

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url ./",
-    "test": "jest",
+    "test": "jest --watch",
     "watch": "parcel watch index.html --public-url ./",
     "predeploy": "parcel build index.html --no-source-maps --public-url ./ --out-dir gh-pages",
     "deploy": "gh-pages -d gh-pages",
