--- a/package.json
+++ b/package.json
@@ -5,34 +5,33 @@
   "description": "일랜시아 웹 루트계산기",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html --public-url ./",
-    "test": "jest --watch",
-    "watch": "parcel watch index.html --public-url ./",
-    "predeploy": "parcel build index.html --no-source-maps --public-url ./ --out-dir gh-pages",
+    "start": "vite",
+    "build": "vite build",
+    "test": "vitest",
+    "preview": "vite preview",
+    "watch": "vite",
+    "predeploy": "vite build --outDir gh-pages",
     "deploy": "gh-pages -d gh-pages",
     "postdeploy": "rimraf gh-pages"
   },
   "author": "ktseo41",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.28.3",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-typescript": "^7.27.1",
-    "@types/fastclick": "^1.0.33",
     "@types/react": "^19.1.12",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
-    "babel-jest": "^30.1.2",
+    "@vitejs/plugin-react": "^5.0.2",
     "gh-pages": "^6.3.0",
-    "jest": "^30.1.3",
-    "parcel-bundler": "^1.12.5",
+    "jsdom": "^26.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
     "sass": "^1.92.0",
     "styled-components": "^6.1.19",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "uuid": "^11.1.0",
+    "vite": "^7.1.4",
+    "vitest": "^3.2.4"
   }
 }
