feat: styled-components 대체를 위한 TailwindCSS v4 통합
- 최근 사용 경험이 많은 TailwindCSS로 스타일링 방식을 변경하기 위해
- styled-components를 점진적으로 제거하고 TailwindCSS 유틸리티 클래스로 대체
- 향후 모든 styled-components를 TailwindCSS 유틸리티 클래스로 마이그레이션 예정

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "route-calculator",
   "homepage": "https://ktseo41.github.io/route-calculator/index.html",
   "version": "0.9.4",
+  "type": "module",
   "description": "일랜시아 웹 루트계산기",
   "main": "index.html",
   "scripts": {
@@ -33,5 +34,9 @@
     "uuid": "^11.1.0",
     "vite": "^7.1.4",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
+    "tailwindcss": "^4.1.12"
   }
 }
