--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "description": "일랜시아 웹 루트계산기",
   "main": "index.html",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "test": "vitest",
-    "preview": "vite preview",
-    "watch": "vite",
     "predeploy": "vite build --outDir gh-pages",
     "deploy": "gh-pages -d gh-pages",
     "postdeploy": "rimraf gh-pages"
@@ -19,7 +17,6 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^19.1.12",
-    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.0.2",
@@ -28,7 +25,6 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
-    "sass": "^1.92.0",
     "styled-components": "^6.1.19",
     "typescript": "^5.9.2",
     "uuid": "^11.1.0",
