--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "ktseo41",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
@@ -26,6 +27,7 @@
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
     "styled-components": "^6.1.19",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
     "uuid": "^11.1.0",
     "vite": "^7.1.4",
@@ -33,7 +35,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   }
