--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
+    /* Path mapping */
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "@/*": ["./src/*"]
     },
-    "typeRoots": ["node_modules/@types"],
-    "noImplicitAny": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "downlevelIteration": true,
-    "lib": ["es2017", "dom"],
-    "strict": true
+    "types": ["node"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "vite.config.ts"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
