--- a/.github/workflows/deploy-v2.yml
+++ b/.github/workflows/deploy-v2.yml
@@ -50,7 +50,7 @@ jobs:
           publish_branch: gh-pages
 
           # ❗️ 가장 중요한 부분: 배포될 목적지 폴더를 지정합니다.
-          destination_dir: ./route-calculator-v2
+          destination_dir: ./v2
 
           # ❗️ 기존 'gh-pages' 브랜치의 다른 파일들을 삭제하지 않도록 설정합니다.
           # 이 옵션이 없으면 기존에 배포된 루트 경로의 사이트가 사라집니다.
