--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.542.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
