--- a/package.json
+++ b/package.json
@@ -27,19 +27,15 @@
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
     "styled-components": "^6.1.19",
-    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
     "uuid": "^11.1.0",
     "vite": "^7.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
-    "lucide-react": "^0.542.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "lucide-react": "^0.542.0"
   }
 }
