--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.0.2",
