--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^7.0.3",
     "babel-jest": "^25.5.1",
-    "bulma": "^0.8.2",
     "gh-pages": "^2.2.0",
     "jest": "^25.5.3",
     "parcel-bundler": "^1.12.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.5",
-    "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bulma": "^0.8.2",
+    "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^16.13.1",
+    "sass": "^1.26.5",
+    "styled-components": "^5.1.0",
+    "uuid": "^9.0.0"
+  }
 }
