--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@phosphor-icons/react": "^2.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "es-hangul": "^2.3.8",
     "html-to-image": "^1.11.13"
   }
 }
