--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --watch",
     "watch": "parcel watch index.html --public-url ./",
     "predeploy": "parcel build index.html --no-source-maps --public-url ./ --out-dir gh-pages",
-    "deploy": "gh-pages -d gh-pages",
+    "deploy": "gh-pages -d gh-pages -b gh-pages-legacy",
     "postdeploy": "rimraf gh-pages"
   },
   "author": "ktseo41",
